--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,11 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14
+        
 
 
   deploy_staging:
-    needs: build
+    needs: deploy_dev
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     steps:
@@ -47,7 +48,7 @@ jobs:
  
 
   deploy_production:
-    needs: build
+    needs: deploy_staging
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
