--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,6 @@ jobs:
   deploy_staging:
     needs: deploy_dev
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -45,12 +44,14 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14
+        
+    - name: Run tests with Maven
+      run: mvn -B test --file pom.xml
  
 
   deploy_production:
     needs: deploy_staging
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
