--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,36 @@ jobs:
   deploy_dev:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        node-version: 14
+        java-version: '11'
+        distribution: 'adopt'
+
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
+    - name: Build and test with Maven
+      run: mvn -B package --file pom.xml
+
+    - name: Check coverage with JaCoCo
+      run: |
+        coverage=$(awk -F',' '/<counter type="LINE"/ { print $5 }' target/site/jacoco/jacoco.csv | sed 's/%//')
+        if (( $(echo "$coverage < 70" | bc -l) )); then
+          echo "Error: Coverage is below 70% ($coverage%)"
+          exit 1
+        else
+          echo "Success: Coverage is above 70% ($coverage%)"
+        fi
         
 
 
